Update and rename clock.html to index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         color:blue;
         background-color: black;
     }
-    
+    *{
+        background-color:rgb(238, 255, 0);
+    }
 </style>
 <body onload="time()">
     <div id="bg"></div>
